{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 61,
  "lineage": "da120cb2-4283-c748-2c87-4a94678aff44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0122da1d0b4a30ec4",
            "arn": "arn:aws:ec2:eu-north-1:382720393134:instance/i-030f88fbf7baf3b5b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030f88fbf7baf3b5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOps",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0128e1d6ca698cf3f",
            "private_dns": "ip-10-0-101-57.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.57",
            "public_dns": "ec2-16-16-185-218.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.185.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2e084f22e04372d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d3a8c0f9a53e4e7",
            "tags": {
              "Name": "dev-backend-server"
            },
            "tags_all": {
              "Name": "dev-backend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e87b70dfe0246ce"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.default-vpc.aws_subnet.public",
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-group-backend.aws_security_group.this",
            "module.security-group-backend.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:network-acl/acl-07e726eaefadc3b30",
            "default_network_acl_id": "acl-07e726eaefadc3b30",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07e726eaefadc3b30",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "382720393134",
            "subnet_ids": [
              "subnet-02a46c0ad24b8c915",
              "subnet-0e38af0dde731cb81"
            ],
            "tags": {
              "Name": "default-vps-default"
            },
            "tags_all": {
              "Name": "default-vps-default"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:route-table/rtb-048640e642a9b05f5",
            "default_route_table_id": "rtb-048640e642a9b05f5",
            "id": "rtb-048640e642a9b05f5",
            "owner_id": "382720393134",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default-vps-default"
            },
            "tags_all": {
              "Name": "default-vps-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:security-group/sg-01b452a0e04782b04",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01b452a0e04782b04",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "382720393134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-vps-default"
            },
            "tags_all": {
              "Name": "default-vps-default"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:internet-gateway/igw-039f449a379eb7801",
            "id": "igw-039f449a379eb7801",
            "owner_id": "382720393134",
            "tags": {
              "Name": "default-vps"
            },
            "tags_all": {
              "Name": "default-vps"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-039f449a379eb7801",
            "id": "r-rtb-08e321fb60b41514f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e321fb60b41514f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_internet_gateway.this",
            "module.default-vpc.aws_route_table.public",
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:route-table/rtb-02c8730a1a7f7a24f",
            "id": "rtb-02c8730a1a7f7a24f",
            "owner_id": "382720393134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-vps-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "default-vps-private-eu-north-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:route-table/rtb-0390b0dc213bc05e4",
            "id": "rtb-0390b0dc213bc05e4",
            "owner_id": "382720393134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-vps-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "default-vps-private-eu-north-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:route-table/rtb-08e321fb60b41514f",
            "id": "rtb-08e321fb60b41514f",
            "owner_id": "382720393134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-vps-public"
            },
            "tags_all": {
              "Name": "default-vps-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d4955640ac4de6c",
            "route_table_id": "rtb-02c8730a1a7f7a24f",
            "subnet_id": "subnet-02a46c0ad24b8c915"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_route_table.private",
            "module.default-vpc.aws_subnet.private",
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e27d0427aaad109a",
            "route_table_id": "rtb-0390b0dc213bc05e4",
            "subnet_id": "subnet-0e38af0dde731cb81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_route_table.private",
            "module.default-vpc.aws_subnet.private",
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b15ea8d165ff5eeb",
            "route_table_id": "rtb-08e321fb60b41514f",
            "subnet_id": "subnet-01d3a8c0f9a53e4e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_route_table.public",
            "module.default-vpc.aws_subnet.public",
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:subnet/subnet-02a46c0ad24b8c915",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a46c0ad24b8c915",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382720393134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vps-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "default-vps-private-eu-north-1a"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:subnet/subnet-0e38af0dde731cb81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e38af0dde731cb81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382720393134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vps-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "default-vps-private-eu-north-1b"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:subnet/subnet-01d3a8c0f9a53e4e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d3a8c0f9a53e4e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "382720393134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vps-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "default-vps-public-eu-north-1a"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.default-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.default-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:vpc/vpc-0541fb40fc6ceecf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e726eaefadc3b30",
            "default_route_table_id": "rtb-048640e642a9b05f5",
            "default_security_group_id": "sg-01b452a0e04782b04",
            "dhcp_options_id": "dopt-0c8af6053382f485b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0541fb40fc6ceecf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048640e642a9b05f5",
            "owner_id": "382720393134",
            "tags": {
              "Name": "default-vps"
            },
            "tags_all": {
              "Name": "default-vps"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:382720393134:security-group/sg-09e87b70dfe0246ce",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-09e87b70dfe0246ce",
            "ingress": [],
            "name": "backend-20260517111054556600000004",
            "name_prefix": "backend-",
            "owner_id": "382720393134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend"
            },
            "tags_all": {
              "Name": "backend"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0541fb40fc6ceecf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-backend",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3114843112",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e87b70dfe0246ce",
            "security_group_rule_id": "sgr-0d3fc9fe118f037f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.security-group-backend.aws_security_group.this",
            "module.security-group-backend.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1815595194",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e87b70dfe0246ce",
            "security_group_rule_id": "sgr-013e8d442ba1b5f08",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.security-group-backend.aws_security_group.this",
            "module.security-group-backend.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-253945437",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e87b70dfe0246ce",
            "security_group_rule_id": "sgr-0ebcbdb2ca5643acb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.default-vpc.aws_vpc.this",
            "module.security-group-backend.aws_security_group.this",
            "module.security-group-backend.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}